[project]
name = "quantitative-simulator"
version = "0.1.0"
description = "Simulation tool to compare custom stock portfolios against benchmarks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pyyaml",
    "pandas",
    "pydantic",
    "yfinance",
    "matplotlib",
    "python-box",
    "seaborn",
    "fpdf2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
simulate = "simulator.main:main"